Compiler/test_inputs/valid/01_basic_parentheses.mt
@triton.jit
def one(x, a, b): {
  y = (x + a);
}
