Compiler/test_inputs/invalid/05_missing_semicolon.mt
@triton.jit
def bad_semi(x): {
  y = x + 1
}
